--- a/catalog-info.yml
+++ b/catalog-info.yml
@@ -2,6 +2,8 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: my-kubernetes-component
+  annotations:
+    backstage.io/kubernetes-id: postgres-db
 spec:
   lifecycle: production
   owner: my-team
